# spikingjelly

./: .gitignore  .markdownlint.json  .readthedocs.yml  1_搭建SpikingJelly环境.ipynb  2_输入数据编码.ipynb  3_脉冲神经元模型.ipynb  5_单层SNN识别MNIST.ipynb  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENCE-DE  LICENSE  LICENSE-CN  LICENSE-FRA  LICENSE-HI  README.md  README_cn.md  bugs.md  cifar10_dvs.py  demo.py  git.sh  plan.md  plan_phase5_cupy.md  publications.json  publications.md  pyproject.toml  requirements.txt  setup.py  test.py  w1.py
.agents/plans/: ann2snn-long-term-plan.md  ann2snn-phase1-operator-design.md
.codex/: pr-review-bot-loop-state.json
.github/ISSUE_TEMPLATE/: new-issue.md
.github/workflows/: changelog.yml  hermes-review.yml  ocr-review.yml
.hermes/: pr-review-bot-loop-state.json
LICENSES/translations/: LICENSE.de  LICENSE.en  LICENSE.fr  LICENSE.hi
Quickstart/: 2_输入数据编码.ipynb  4_多输入神经元.ipynb
SpikingFlow/: setup.py
SpikingFlow/clock_driven/: accelerating.py  encoding.py  functional.py  layer.py  neuron.py  surrogate.py
SpikingFlow/connection/: __init__.py  transform.py
SpikingFlow/dataset/: breast-cancer.csv  iris.csv  pima-indians-diabetes.csv  readme.md
SpikingFlow/datasets/: __init__.py  cifar10_dvs.py  dvs_cifar10.py  n_mnist.py
SpikingFlow/encoding/: __init__.py  readme.md
SpikingFlow/event_driven/: __init__.py  encoding.py  gaussian_tuning_curve.py  neuron.py  postsynaptic_potential_kernel_function.py  readme.md  spikeprop.py  tempotron.py
SpikingFlow/learning/: __init__.py
SpikingFlow/neuron/: __init__.py
SpikingFlow/simulating/: __init__.py
SpikingFlow/softbp/: __init__.py  accelerating.py  functional.py  layer.py  neuron.py  optim.py  soft_pulse_function.py
SpikingFlow/visualizing/: __init__.py
benchmark/: analyze_distributed_benchmark.py  benchmark_ann2snn_rate_coding_step_mode.py  benchmark_ann2snn_spikezip_stbif.py  benchmark_ann2snn_spikezip_vit_qann.py  benchmark_ann2snn_sta_step_mode.py  benchmark_flexsn_backward_bucket_table.py  benchmark_fp8_training_inference.py  benchmark_memopt.py  benchmark_same_dtype_stable_vs_mp.py  benchmark_snn_distributed.py  benchmark_train_backends.py  benchmark_train_precision_ann_attention.py  benchmark_train_precision_ann_linear_only.py  benchmark_train_precision_ann_single_linear.py  benchmark_train_precision_snn_fc.py  benchmark_train_precision_snn_fc_sweep.py  benchmark_triton_last_state.py  benchmark_triton_neuron_kernels.py  fp8_efficiency.py  probe_lif_fp8_triton.py
benchmark/flexsn/: benchmark_flexsn_lif.py  benchmark_lif_compile.py  benchmark_vgg_inductor.py  benchmark_vgg_train.py  flex_sn_inductor.py
benchmark/snn_llm/: README.md  _reporting.py  _spikegpt_author.py  _spikegpt_pilot.py  _spikegpt_training.py  smoke.py  sources.json  spikegpt_checkpoint_compare.py  spikegpt_distributed_precision_smoke.py  spikegpt_train_pilot.py
connection/: __init__.py  readme.md  transform.py
dataset/: breast-cancer.csv  iris.csv  liver-disorders.csv  readme.md
docs/: environment.yml  readthedocs-environment.yml  requirements.txt
docs/pytorch_sphinx_theme/: package.json
docs/source/: SpikingFlow.ann2snn.examples.rst  SpikingFlow.ann2snn.rst  SpikingFlow.clock_driven.accelerating.rst  SpikingFlow.clock_driven.encoding.rst  SpikingFlow.clock_driven.examples.rst  SpikingFlow.clock_driven.functional.rst  SpikingFlow.clock_driven.layer.rst  SpikingFlow.clock_driven.neuron.rst  SpikingFlow.clock_driven.optim.rst  SpikingFlow.clock_driven.rst  SpikingFlow.clock_driven.surrogate.rst  SpikingFlow.connection.rst  SpikingFlow.dataset.rst  SpikingFlow.datasets.rst  SpikingFlow.encoding.rst  SpikingFlow.event_driven.encoding.rst  SpikingFlow.event_driven.examples.rst  SpikingFlow.event_driven.neuron.rst  SpikingFlow.event_driven.rst  SpikingFlow.examples.rst  SpikingFlow.learning.rst  SpikingFlow.neuron.rst  SpikingFlow.rst  SpikingFlow.simulating.rst  SpikingFlow.softbp.examples.rst  SpikingFlow.softbp.rst  SpikingFlow.visualizing.rst  Tutorials.rst  Tutorials_en.rst  changelog.rst  conf.py  connection.rst  contents.rst  encoding.rst  event_driven.rst  indes.rst  (+81 more)
encoding/: __init__.py  gaussian_tuning_curve.py  readme.md
event_driven/: postsynaptic_potential_kernel_function.py  tempotron.py
learning/: __init__.py  connection.py  readme.md
logo/: demo.py
module/: postsynaptic_potential_kernel_function.py  readme.md  spikeprop.py  tempotron.py
neuron/: __init__.py  readme.md
simulating/: __init__.py  readme.md
spikingjelly/: configure.py  neuron_cupy.py
test/: test_visualizing.py
tools/: generate_changelog_rst.py  generate_publications.py
workspace/: design_flexsn_inductor.md  gpu_verify.sh  pr_flexsn_inductor.md  todo_flexsn_inductor.md
(+1010 files in other folders)
